--- a/.github/workflows/flyto.yml
+++ b/.github/workflows/flyto.yml
@@ -8,6 +8,7 @@ jobs:
       # This step checks out a copy of your repository.
       - uses: actions/checkout@v2
       - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: echo "GITHUB_SHA=$GITHUB_SHA" >> .env
       - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
