--- a/.github/workflows/flyto.yml
+++ b/.github/workflows/flyto.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: echo "GITHUB_SHA=$GITHUB_SHA" >> .env
+      - run: echo .env
       - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
